Refactor AuthRolesProvider so it no longer needs its own cache (#66)
* Refactor AuthRolesProvider so it does not need its own cache
* Move AuthRolesProvider into the pass-authz-roles module
* Add configuration options for cache size and life
* Update README